@startuml
skinparam style strictuml
!pragma layout smetana

title psu_capstone.agent_layer.legacy_htm.column

class Column {
  +position: tuple[int, int]
  +potential_synapses: list[Synapse]
  +boost: float
  +active_duty_cycle: float
  +overlap_duty_cycle: float
  +min_duty_cycle: float
  +connected_synapses: list[Synapse]
  +overlap: float
  +cells: list[Cell]
  +__init__(potential_synapses: list[Synapse], position: tuple[int, int])
  +compute_overlap(input_vector: np.ndarray)
}
class Synapse
class Cell

Column o-- "0..*" Synapse : potential_synapses
Column o-- "0..*" Synapse : connected_synapses
Column o-- "0..*" Cell : cells

@enduml
